--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     <button onclick="clearMemory()">🧠</button>
     <button onclick="toggleTheme()">🌓</button>
   </div>
-  <script src="/scripts/memory.js"></script>
-  <script src="/scripts/rules.js"></script>
-  <script src="/scripts/wizzCore.js"></script>
+  <script src="/memory.js"></script>
+  <script src="/rules.js"></script>
+  <script src="/wizzCore.js"></script>
+
 </body>
 </html>
