--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <button onclick="clearMemory()">🧠</button>
     <button onclick="toggleTheme()">🌓</button>
   </div>
-  <script src="/memory.js"></script>
-  <script src="/rules.js"></script>
-  <script src="/wizzCore.js"></script>
+  <script src="memory.js"></script>
+  <script src="rules.js"></script>
+  <script src="wizzCore.js"></script>
 
 </body>
 </html>
