--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <p>Loading game…</p>
     <p>If it doesn’t redirect, <a href="/game.html" style="color:#7be4ff;">click here to play</a>.</p>
   </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>
+    eruda.init();
+</script>
+  
 </body>
 </html>
